ui: draw left side of the graph
* labels for ORFs, CDS, hits, and chart
* parameterized via a lot of attributes on the directive
* pulled some graph measurments out into a testable
  `GraphingCalculator` - need to extract some more math into here

refs Programming:#735

--- a/npactweb/npactweb/static/js/graphs/page.html
+++ b/npactweb/npactweb/static/js/graphs/page.html
@@ -1,1 +1,14 @@
-HELLO FROM A TEMPLATE
+<div>
+  <h2>{{title}}</h2>
+  <!-- TODO: put this in a loop -->
+  <div npact-graph style="height:200px;"
+       data="d" range="range"
+       left-padding="90" profile-height="100"
+       hits-height="15" cds-height="30" orf-height="30"
+       header-label-padding="10"
+       header-label-fontsize="10"
+       axis-label-fontsize="10"
+       axis-title-fontsize="20"
+       axis-title="% GC"
+       ></div>
+</div>
