ui: start graph chrome drawing
refs Programming:#735

--- a/npactweb/npactweb/static/js/graphs/page.html
+++ b/npactweb/npactweb/static/js/graphs/page.html
@@ -3,12 +3,13 @@
   <!-- TODO: put this in a loop -->
   <div npact-graph style="height:200px;"
        data="d" range="range"
-       left-padding="120" profile-height="100"
+       left-padding="120"
        hits-height="15" cds-height="30" orf-height="30"
        header-label-padding="10"
        header-label-fontsize="11"
        axis-label-fontsize="11"
        axis-title-fontsize="20"
        axis-title="% GC"
+       profile-height="100" profile-ticks="5"
        ></div>
 </div>
