ui: better axis labels, more fixed gfx
* move more calculations into `GraphingCalculator`
* y axis labels and ticks positioned properly
* frame for the main graph
* more tests

refs Programming:#735 (1)

--- a/npactweb/npactweb/static/js/graphs/page.html
+++ b/npactweb/npactweb/static/js/graphs/page.html
@@ -1,7 +1,7 @@
 <div>
   <h2>{{title}}</h2>
   <!-- TODO: put this in a loop -->
-  <div npact-graph style="height:200px;"
+  <div npact-graph style="height:200px; border:1px solid blue;"
        data="d" range="range"
        left-padding="120"
        hits-height="15" cds-height="30" orf-height="30"
