ui: set colors in via directive attributes
* `header-label-fontcolor` - color of the header row labels
* `axis-fontcolor` - color of all axis labels / titles
* `border-color` - color of tick marks and the graph border

refs Programming:#735 (.25)

--- a/npactweb/npactweb/static/js/graphs/page.html
+++ b/npactweb/npactweb/static/js/graphs/page.html
@@ -6,10 +6,13 @@
        left-padding="120"
        hits-height="15" cds-height="30" orf-height="30"
        header-label-padding="10"
+       header-label-fontcolor="#444",
        header-label-fontsize="11"
        axis-label-fontsize="11"
+       axis-fontcolor="#444",
        axis-title-fontsize="20"
        axis-title="% GC"
+       border-color="#444"
        profile-height="100" profile-ticks="5"
        ></div>
 </div>
