ui: first draft drawing profiles
* can specify colors via `graph-*-color` attributes
* draws in genespace, scales to fit the graph frame
* iterates over the profile once to draw all three lines
* fix some race conditions by using the right watch

refs Programming:#735 (.75)

--- a/npactweb/npactweb/static/js/graphs/page.html
+++ b/npactweb/npactweb/static/js/graphs/page.html
@@ -14,5 +14,8 @@
        axis-title="% GC"
        border-color="#444"
        profile-height="100" profile-ticks="5"
+       graph-red-color="red"
+       graph-blue-color="blue"
+       graph-green-color="green"
        ></div>
 </div>
