graph: show 5 on the page
* in `Grapher`, save a reference to the genome group, we can't look it
  up by id unless we create document-level unique ids, and it's
  simpler to save a reference
* loop over a list of ranges on `page.html`

refs Programming:#735 (.25)

--- a/npactweb/npactweb/static/js/graphs/page.html
+++ b/npactweb/npactweb/static/js/graphs/page.html
@@ -1,7 +1,8 @@
 <div>
   <h2>{{title}}</h2>
   <!-- TODO: put this in a loop -->
-  <div npact-graph style="height:200px;border:1px solid blue;"
+  <div ng-repeat="range in ranges"
+       npact-graph style="height:200px;border:1px solid blue;"
        data="d" range="range"
        headers="[{id:'orfs', title:'Newly Identified ORFs', lineType:'extract'},
 		{id:'cds', title:'Input file CDS', lineType:'extract'},
