graph: extract tooltips
* save the extract object as part of the initialization attributes on
  the kinetic shapes, so we can retrieve it in our click handler
  later. This might be considered abuse of the kinetic
  `getAttrs/setAttrs` system, but it's the simplest solution
* use `qtip2` to position the tooltip near at the mouse click;
  positioning was a pretty haphazard affair, made many attempts at
  different `qtip2` config to get it right, ended up using `pageX` and
  `pageY` from the mouse event, which are pretty reliable. according
  to quirksmode.org
* new `npact-extract` directive for rendering tooltip content, expects
  to get the entire extract object: `<div npact-extract="obj"></div>`
* tooltip content is a rendered angular directive. Have to jump
  through some hoops to get angular to give us a html string for
  `qtip2`. This could be modified by pointing `qtip2` at a hidden div,
  and have angular update that div as needed. That would be less
  futzy, but a lot more moving parts. Might be better in the long run.
* tooltips are above/below the arrow based on the extract's complement

refs Programming:#735 (1.75)

--- a/npactweb/npactweb/static/js/graphs/page.html
+++ b/npactweb/npactweb/static/js/graphs/page.html
@@ -2,6 +2,7 @@
   <h2>{{title}}</h2>
   <!-- TODO: put this in a loop -->
   <div ng-repeat="range in ranges"
+       id="graph{{$index}}"
        npact-graph style="height:200px;border:1px solid blue;"
        data="d" range="range"
        headers="[{id:'orfs', title:'Newly Identified ORFs', lineType:'extract'},
