graph: simplify/refactor
* remove `WidthChecker`, add `Utils.widthAvailable`
* only check for the width once on the graph page, then pass that
  width to the `GraphDealer`. One width check vs. N width checks
* only render graphs once we have a width
* move more internal helper functions to the end of their closing
  block
* more jsdoc comments
* pushing towards getting graph calculations out of the `Grapher` object

refs Programming:#742 (.25)

--- a/npactweb/npactweb/static/js/graphs/page.html
+++ b/npactweb/npactweb/static/js/graphs/page.html
@@ -3,6 +3,6 @@
   <div ng-repeat="spec in graphSpecs"
        id="graph_{{$index}}"
        npact-graph="spec"
-       style="height:200px;"
+       style="height:200px; border-bottom: 1px solid #AAF;"
        ></div>
 </div>
