npactGraphConfig: display the range of bases being shown
refs Programming:#742(.125)

--- a/npactweb/npactweb/static/js/graphs/config.html
+++ b/npactweb/npactweb/static/js/graphs/config.html
@@ -13,6 +13,7 @@
 				      ng-change="GraphDealer.setColors(colorBlindFriendly)" /></label>
   <br/>
 
+  Showing bases {{range[0]}} - {{range[1]}}
   <div>
   <button style="float:left;" ng-disabled="!GraphDealer.hasPreviousPage()"
 	  ng-click="GraphDealer.previousPage()">
@@ -20,6 +21,6 @@
   <button style="float:right;" ng-disabled="!GraphDealer.hasNextPage()"
 	  ng-click="GraphDealer.nextPage()">
     Next Page</button>
-  <div style="clear:both;" ></div>
+  <div style="clear:both;" >  </div>
   </div>
 </div>
