--- a/npactweb/npactweb/static/js/graphs/page.html
+++ b/npactweb/npactweb/static/js/graphs/page.html
@@ -1,8 +1,70 @@
 <div>
   <h2>{{title}}</h2>
-  <div ng-repeat="spec in graphSpecs"
-       id="graph_{{$index}}"
-       npact-graph="spec"
-       style="height:{{graphHeight}}px; border-bottom: 1px solid #AAF;"
-       ></div>
+  <div id="computationerred" class="ui-state-error ui-corner-all" ng-if="error">
+    <p>
+      <span class="ui-icon ui-icon-alert"></span>
+      There was an error. You can click refresh to try again,
+      <a href="{{ config.reconfigure_url }}">reconfigure this report</a>,
+      or return to the <a href="/npact/">start</a>.
+    </p>
+  </div>
+  <div id="progressreport">
+    <h3> Status </h3>
+    <div id="computationrunning">
+      <div  class="ui-state-highlight">
+        <img src="{{STATIC_BASE_URL}}images/spinner.gif" class="spinner"/>
+        <p>
+          N-PACT is: <em ng-bind="status">Initializing</em>
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div id="results">
+    <h3>Results </h3>
+    <div>
+      <div>
+        <div ng-repeat="spec in graphSpecs"
+             id="graph_{{$index}}"
+             npact-graph="spec"
+             style="height:{{graphHeight}}px; border-bottom: 1px solid #AAF;"
+             ></div>
+      </div>
+      <h4>Downloads</h4>
+
+      <div id="graphicalresults" class="ui-state-highlight ui-corner-all">
+        <div class="ui-icon ui-icon-info"></div>
+        <p>
+          The graph is now ready <a id="downloadlink" href="#" target="_blank">Click Here to view</a>.
+        </p>
+      </div>
+      <div id="predictionresults" class="ui-state-highlight ui-corner-all"
+           ng-show="miscFiles">
+        <div class="ui-icon ui-icon-info"></div>
+        <p>
+          The prediction results are now ready:
+          <ul id="files">
+            <li ng-repeat="f in miscFiles">
+              <a href="{{FETCH_URL}}{{f}}" target="_blank">{{f}}</a>
+            </li>
+        </p>
+      </div>
+
+      <div ng-if="config.email">
+        <h4>Email results</h4>
+        <p>An email link to the results will be sent to <tt>{{config.email}}</tt>. You may leave this page at any time and return via that link.</p>
+      </div>
+
+      <div id="tryagain">
+        <h4>Not what you expected?</h4>
+        <ul>
+          <li><a id="reconfigurelink" href="{{ config.reconfigure_url }}">Reconfigure it</a> and try again.</li>
+          <li><a href="/npact/">Start Over</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+
+
 </div>
