--- a/npactweb/npactweb/static/js/graphs/page.html
+++ b/npactweb/npactweb/static/js/graphs/page.html
@@ -8,7 +8,7 @@
       or return to the <a href="/npact/">start</a>.
     </p>
   </div>
-  <div id="progressreport" ng-show="!ready">
+  <div id="progressreport" ng-show="status">
     <h3> Status </h3>
     <div id="computationrunning">
       <div  class="ui-state-highlight">
