--- a/npactweb/npactweb/static/js/graphs/page.html
+++ b/npactweb/npactweb/static/js/graphs/page.html
@@ -23,7 +23,10 @@
   <div id="results">
     <h3>Results </h3>
     <div>
-      <div>
+      <div infinite-scroll="ctrl.addMore()"
+           infinite-scroll-disabled="busy"
+           infinite-scroll-distance="2"
+           >
         <div ng-repeat="spec in graphSpecs"
              id="graph_{{$index}}"
              npact-graph="spec"
