remove next/previous page buttons
these are no longer desired, will be doing an infinite scroll. Removes
some dead code.

refs #846 (.25)

--- a/npactweb/npactweb/static/js/graphs/config.html
+++ b/npactweb/npactweb/static/js/graphs/config.html
@@ -21,13 +21,7 @@
   <div ng-show="graphConfig.visible">
     Showing bases {{graphConfig.visible.startBase}} - {{graphConfig.visible.endBase}}
   </div>
-  <div>
-  <button style="float:left;" ng-disabled="!graphConfig.hasPreviousPage"
-	  ng-click="ctrl.previousPage()">
-    Previous Page</button>
-  <button style="float:right;" ng-disabled="!graphConfig.hasNextPage"
-	  ng-click="ctrl.nextPage()">
-    Next Page</button>
-  <div style="clear:both;" >  </div>
-  </div>
+  <h3>Tracks</h3>
+  [Checkboxes for the loaded tracks]
+  <h3>Nprofile settings</h3>
 </div>
