handle zooming with events and no `GraphDealer`
* `Grapher` fires a `Evt.ZOOM`
* `npactGraphPageCtrl` catches it, calls `GraphingCalculator.zoom` and
  updates the `GraphConfig`
* change signature for `GraphingCalculator.zoom` to take an options
  object instead of a bunch of params
* remove some dead code

Now `Grapher` does all it's UI machinations via events, which is a nice
de-coupling.

refs #846 (.5)

--- a/npactweb/npactweb/static/js/graphs/config.html
+++ b/npactweb/npactweb/static/js/graphs/config.html
@@ -4,6 +4,7 @@
   <ul>
     <li>Click and drag on a graph to pan from left to right</li>
     <li>Double click on a graph to zoom into that point</li>
+    <li>Hold shift and double click on a graph to zoom out</li>
   </ul>
 
   <label>Zoom:
