move genome partitioning to `npactGraphPageCtrl`
* eliminates `GraphDealer` altogether
* `npactGraphPageCtrl` is the glue connecting service calls to `$scope`
* `npactGraphPageCtrl` manages the list of visible graph specs vs all
  graph specs for the profile
* tweak the infinite scroll options

refs #846 (.25)

--- a/npactweb/npactweb/static/js/graphs/page.html
+++ b/npactweb/npactweb/static/js/graphs/page.html
@@ -23,10 +23,7 @@
   <div id="results">
     <h3>Results </h3>
     <div>
-      <div infinite-scroll="ctrl.addMore()"
-           infinite-scroll-disabled="busy"
-           infinite-scroll-distance="2"
-           >
+      <div infinite-scroll="ctrl.addMore()" infinite-scroll-distance="4">
         <div ng-repeat="spec in graphSpecs"
              id="graph_{{$index}}"
              npact-graph="spec"
