--- a/npactweb/npactweb/static/js/graphs/config.html
+++ b/npactweb/npactweb/static/js/graphs/config.html
@@ -20,8 +20,7 @@
   </form>
   <br/>
   <label>Color-blind friendly:
-    <input type="checkbox"
-	   ng-model="gc.colorBlindFriendly" /></label>
+    <input type="checkbox" ng-model="gc.colorBlindFriendly" /></label>
   <br/>
 
   <h3>Tracks</h3>
