new `npact-graph-container` directive
manages the visible graphs

--- a/npactweb/npactweb/static/js/graphs/page.html
+++ b/npactweb/npactweb/static/js/graphs/page.html
@@ -23,13 +23,7 @@
   <div id="results">
     <h3>Results </h3>
     <div>
-      <div infinite-scroll="ctrl.addMore()" infinite-scroll-distance="3">
-        <div ng-repeat="spec in graphSpecs"
-             id="graph_{{$index}}"
-             npact-graph="spec"
-             style="height:{{graphHeight}}px; border-bottom: 1px solid #AAF;"
-             ></div>
-      </div>
+      <div npact-graph-container="graphSpecs"></div>
       <h4>Downloads</h4>
 
       <div id="predictionresults" class="ui-state-highlight ui-corner-all"
