move graph management to `npact-graph-container`
* uses `$watch`es to notice when data is loaded by the parent controller
  and modify the `GraphConfig` state bag
* adds a `npactGraphContainerCtrl` controller separate from the
  directive

refs #846 (1)

--- a/npactweb/npactweb/static/js/graphs/page.html
+++ b/npactweb/npactweb/static/js/graphs/page.html
@@ -23,7 +23,7 @@
   <div id="results">
     <h3>Results </h3>
     <div>
-      <div npact-graph-container="graphSpecs"></div>
+      <div npact-graph-container></div>
       <h4>Downloads</h4>
 
       <div id="predictionresults" class="ui-state-highlight ui-corner-all"
