--- a/npactweb/npactweb/static/js/graphs/graph-container.html
+++ b/npactweb/npactweb/static/js/graphs/graph-container.html
@@ -1,5 +1,5 @@
 <div>
-  <div infinite-scroll="ctrl.addMore()" infinite-scroll-distance="3">
+  <div>
     <div ng-repeat="spec in graphSpecs"
          id="graph_{{$index}}"
          npact-graph="spec"
