Use `track by` on the graph container
This causes the dom for npactgraph to not be destroyed and rebuilt every
time around.

re #864 (0.5)

--- a/npactweb/npactweb/static/js/graphs/graph-container.html
+++ b/npactweb/npactweb/static/js/graphs/graph-container.html
@@ -1,5 +1,5 @@
 <div>
-  <div ng-repeat="spec in graphSpecs"
+  <div ng-repeat="spec in graphSpecs track by $index"
        id="graph_{{$index}}"
        class="graph"
        npact-graph="spec"
