--- a/npactweb/npactweb/static/js/graphs/page.html
+++ b/npactweb/npactweb/static/js/graphs/page.html
@@ -3,15 +3,15 @@
   <div id="computationerred" class="ui-state-error ui-corner-all" ng-if="error">
     <p>
       <span class="ui-icon ui-icon-alert"></span>
-      There was an error. You can click refresh to try again,
-      <a href="{{ configureUrl }}">reconfigure this report</a>,
+      There was an error. You can click refresh to try again
       or return to the <a href="/npact/">start</a>.
     </p>
   </div>
   <div id="progressreport" ng-show="status">
     <h3> Status </h3>
     <div id="computationrunning">
-      <div  class="ui-state-highlight">
+      <div class=" ui-corner-all" ng-class="{'ui-state-highlight': !error,
+                     'ui-state-error': error}">
         <img src="{{STATIC_BASE_URL}}images/spinner.gif" class="spinner"/>
         <p>
           N-PACT is: <em ng-bind="status">Initializing</em>
@@ -41,14 +41,6 @@
       <div ng-if="email">
         <h4>Email results</h4>
         <p>An email link to the results will be sent to <code>{{email}}</code>. You may leave this page at any time and return via that link.</p>
-      </div>
-
-      <div id="tryagain">
-        <h4>Not what you expected?</h4>
-        <ul>
-          <li><a id="reconfigurelink" href="{{ configureUrl }}">Reconfigure it</a> and try again.</li>
-          <li><a href="/npact/">Start Over</a></li>
-        </ul>
       </div>
     </div>
   </div>
