--- a/npactweb/npactweb/static/js/graphs/config.html
+++ b/npactweb/npactweb/static/js/graphs/config.html
@@ -48,8 +48,18 @@
       <div>
         <label>Which nucleotides to analyze?</label><br/>
         <select multiple ng-model="gc.nucleotides"
+                title="nucleotide type(s) represented in frame analysis"
                 style="width:100%; display:block;"
                 ng-options="x for x in ['A', 'C', 'G', 'T']">
+        </select>
+      </div>
+      <h3>Prediction Options</h3>
+      <div>
+        <label>Prediction significance</label>
+        <select ng-model="gc.significance"
+                ng-options="x for x in ['0.01', '0.001', '0.0001']"
+                title="significance threshold for high scoring segments (hits)"
+                >
         </select>
       </div>
   </form>
