Make the title editable
This uses ngSanitize and contenteditable to make the title at the top of
the page editable inline.

Work at persisting that on round trips correctly

re #849 (0.5)

--- a/npactweb/npactweb/static/js/graphs/page.html
+++ b/npactweb/npactweb/static/js/graphs/page.html
@@ -1,5 +1,5 @@
 <div>
-  <h2 ng-bind="title"></h2>
+  <h2 ng-model="gc.first_page_title" contenteditable strip-br="true"></h2>
   <div id="progressreport" ng-show="false">
     <!-- This needs to display messages from MessageBus -->
     <h3> Status </h3>
