Better html5 mode support
 * Specify the `<base href="...">`
 * Don't tell angular to ignore the lack of base href
 * Defaults becomes much simpler
 * Link to home, about, et al. works much better

re #847 (0.25)

--- a/npactweb/npactweb/static/js/graphs/config.html
+++ b/npactweb/npactweb/static/js/graphs/config.html
@@ -7,7 +7,7 @@
       <li>Double click on a graph to zoom into that point</li>
       <li>Hold shift and double click on a graph to zoom out</li>
     </ul>
-    <div><a href="?" ng-click="gcctrl.defaults()">Reset to defaults</a></div>
+    <div><a href="?" target="_self">Reset to defaults</a></div>
     <div>
       <label>Zoom:
         <input type="number" name="basesPerGraph"
